# sensors

./: docker-compose.yml  dockerfile_dev  dockerfile_nvidia_ros_humble  test.sdf
bench_detector/: package.xml  setup.cfg  setup.py
bench_detector/bench_detector/: surface_detection.py
blob_tracking/: package.xml  setup.cfg  setup.py
blob_tracking/blob_tracking/: blob_point_pub.py  blob_tracker.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: DetectedObjects.msg  DetectedSurfaces.msg  InferenceResult.msg  ObjectCount.msg  PoseKeypoint.msg  PoseResult.msg  SegmentationResult.msg  Yolov8Segmentation.msg
line_following/: package.xml  setup.py
perception_ros2/: package.xml  setup.cfg  setup.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: mecanum.config.yaml  wheel_controllers.yaml
robot_description/launch/: joy_command.launch.py  urdf_visualize.launch.py
robot_description/meshes/base/: tecdron_base (copie).stl  tecdron_base.dae  tecdron_base.stl
robot_description/meshes/wheels/: wheel_tecdron_back_left.dae  wheel_tecdron_back_right.dae  wheel_tecdron_front_left.dae  wheel_tecdron_front_right.dae
robot_description/rviz/: rviz_default.rviz
robot_description/src/: wheel_control_method.cpp
robot_description/urdf/: tecdron.xacro
robot_description/urdf/base/: tecdron_base.xacro  tecdron_base_gazebo.xacro
robot_description/urdf/sick/: cameras.xacro  depth_camera.xacro  sick_s300.xacro  sick_s300_gazebo.xacro
robot_description/urdf/wheels/: omni_wheel.xacro  omni_wheel_visual.xacro
robot_gazebo/: CMakeLists.txt  package.xml
(+28 files in other folders)
